<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_resolution_required_text">Please complete action required by %1$s.</string>
    <string name="common_google_play_services_resolution_required_title">Google Play services requires an action</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="Alipay">Alipay</string>
    <string name="account_verification">Account Verification</string>
    <string name="action_settings">Settings</string>
    <string name="all_feeds">all</string>
    <string name="app_name">Lantern</string>
    <string name="apply_referral_code">Apply Referral Code</string>
    <string name="authorize_device_pro">Authorize Device for Pro</string>
    <string name="best_value">Best VALUE!</string>
    <string name="button_text">Start</string>
    <string name="buy_pro_now">Buy Pro Now</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_pro_account">Cancel Pro Account</string>
    <string name="cancel_pro_confirmation">Are you sure? This action cannot be undone! You can sign up for Pro again at any time.</string>
    <string name="cannot_use_own_referral_code">Cannot use your own referral code for promotion</string>
    <string name="card">Card</string>
    <string name="card_number">Card Number</string>
    <string name="change_email_address">Change Email Address</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="check_for_update">Check for Update</string>
    <string name="checkout">Checkout</string>
    <string name="click_button">Click the button to access blocked sites and services</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="congratulations">Congratulations!</string>
    <string name="contact_email">team@getlantern.org</string>
    <string name="contact_message">Help Me</string>
    <string name="contact_option">Contact</string>
    <string name="contact_subject">Lantern Android</string>
    <string name="continue_to_pro">Continue to PRO</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="copy_link">Copy Link</string>
    <string name="could_not_complete_purchase">Could not complete Pro purchase at this time. Try again later!</string>
    <string name="credits_applied">Your credits will be applied to your account on the next billing cycle.</string>
    <string name="cvc">CVC</string>
    <string name="data_cap">You have used your free monthly high speed data. Upgrade to Lantern Pro to continue using Lantern.</string>
    <string name="data_cap_percent">You have reached %1$s of your available Lantern high speed data for the month.</string>
    <string name="data_remaining">%1$sMB Left of your free monthly high speed data</string>
    <string name="default_fragment">Default Fragment</string>
    <string name="desktop_option">Desktop Version</string>
    <string name="device_already_registered">This email address is already a Pro subscriber. Please authorize this device here.</string>
    <string name="device_code">Device Linking Code</string>
    <string name="device_linked_success">Success! Your new device will be linked shortly.</string>
    <string name="device_now_linked">You have successfully linked your device!</string>
    <string name="devices_authorized">Devices authorized to use your Pro account</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="earn_free_month">Earn a free month for every friend that signs up</string>
    <string name="email_address">Email Address</string>
    <string name="email_hint">Email</string>
    <string name="email_in_use">The email is currently in use by another user.</string>
    <string name="email_invite">Email Invite</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="enter_your_email">Enter your email to receive a referral code</string>
    <string name="error_checking_for_update">Error checking for new version of Lantern</string>
    <string name="error_device_code">Error retrieving the device linking code! Please try again later.</string>
    <string name="error_email">There was a problem sending you Lantern Desktop. Please try again later.</string>
    <string name="error_log_email">Error sending logs to Lantern. Please try again later.</string>
    <string name="error_update">Error Downloading Update</string>
    <string name="fatal_error">Lantern encountered a fatal error and is no longer running</string>
    <string name="features_text">Lantern PRO Features</string>
    <string name="feed.error.error_fetching_feed">Error Fetching Feed</string>
    <string name="feed.error.oops">Oops!</string>
    <string name="feed.error.try_again">Please try again</string>
    <string name="find">Find</string>
    <string name="free_month">Get a free month of pro for each sign up</string>
    <string name="free_pro_credits">Free Pro Credits</string>
    <string name="get_code">Get Code</string>
    <string name="get_code_text">Enter your email to receive a code to share with your friends, get a free month of PRO when they sign up!</string>
    <string name="get_free_months">Get Free Months</string>
    <string name="get_lantern_pro">Get Lantern Pro</string>
    <string name="get_pro_credits">Get Free Pro Credits</string>
    <string name="get_pro_now">Get Pro Now</string>
    <string name="get_unlimited_data">"To get unlimited data, ultimate speeds, and even stronger blocking resistance
UPGRADE to Pro!"</string>
    <string name="have_latest_version">Lantern %1$s is the newest version available.</string>
    <string name="includes_free_months">This includes your %2$d bonus months!</string>
    <string name="install_update">Update</string>
    <string name="invalid_email">Invalid e-mail address</string>
    <string name="invalid_payment_method">Invalid Payment method</string>
    <string name="invalid_referral_code">Invalid referral code</string>
    <string name="invalid_verification_code">Invalid verification code</string>
    <string name="link_this_device">To link this device to your Pro account:</string>
    <string name="link_this_device_2">2. A welcome screen will pop-up when your device has been linked.</string>
    <string name="now_using">You are now using the fastest and most stable Lantern to date.</string>
    <string name="open_with">Open with</string>
    <string name="refresh">Refresh</string>
    <string name="share_via">Share via</string>
    <string name="start_using">Start Using Lantern</string>
    <string name="to_get_unlimited">"To get unlimited data, ultimate speeds and even stronger blocking resistance
UPGRADE to Pro!"</string>
    <string name="welcome_to_lantern">Welcome to the new and improved Lantern</string>
    <string name="link_this_device_1">"1. Enter the code above on the 'Add Device' screen on your Pro device."</string>
</resources>