<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:layout_gravity="center_vertical" android:orientation="vertical" android:background="@color/accent_white" android:paddingLeft="30.0dip" android:paddingTop="22.0dip" android:paddingRight="30.0dip" android:paddingBottom="22.0dip" android:layout_width="320.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/wall" android:paddingTop="22.0dip" android:paddingBottom="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/wall" android:scaleType="fitXY" android:adjustViewBounds="true" android:layout_centerInParent="true" />
    <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/black" android:gravity="center" android:id="@id/welcome_to_lantern" android:paddingBottom="22.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/welcome_to_lantern" />
    <TextView android:textSize="13.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/now_using" android:paddingBottom="18.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/now_using" />
    <TextView android:textSize="13.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/unlimited_data" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/to_get_unlimited" />
    <Button android:textSize="14.0sp" android:textColor="@color/accent_white" android:gravity="center" android:layout_gravity="center" android:id="@id/startUsingBtn" android:background="@color/pink" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:clickable="true" android:layout_width="200.0dip" android:layout_height="40.0dip" android:layout_marginTop="16.0dip" android:text="@string/start_using" android:textAllCaps="true" />
</LinearLayout>