<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/linkDeviceView" android:background="@color/accent_white" android:layout_width="fill_parent" android:layout_height="fill_parent" android:baselineAligned="false"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <fragment android:id="@id/titlebar_fragment" android:layout_width="fill_parent" android:layout_height="wrap_content" lantern:backgroundColor="@drawable/nav_background_white" lantern:titleText="@string/authorize_device_pro" class="org.lantern.fragment.TitleBar" xmlns:lantern="http://schemas.android.com/apk/res-auto" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/top_section" android:background="@color/accent_white" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/titlebar_fragment">
        <ImageView android:layout_gravity="center" android:id="@id/account_management" android:paddingTop="20.0dip" android:paddingBottom="38.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/account_management" />
        <TextView android:textSize="14.0sp" android:textColor="@color/gray_device_link" android:gravity="center" android:id="@id/deviceCodeText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/device_code" />
        <TextView android:textSize="37.0sp" android:textStyle="bold" android:textColor="@color/buy_pro" android:gravity="center" android:id="@id/deviceLinkingCode" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="753531" android:layout_centerHorizontal="true" />
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/black" android:gravity="center" android:id="@id/linkThisDevice" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="28.0dip" android:text="@string/link_this_device" android:layout_centerHorizontal="true" android:lineSpacingExtra="5.0dip" />
        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/linkThisDevice1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="28.0dip" android:text="@string/link_this_device_1" android:layout_centerHorizontal="true" android:lineSpacingExtra="5.0dip" />
        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/linkThisDevice2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/link_this_device_2" android:layout_centerHorizontal="true" android:lineSpacingExtra="5.0dip" />
    </LinearLayout>
</LinearLayout>