<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/menuLayout" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:onClick="onClick"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.thefinestartist.finestwebview.views.ShadowLayout android:id="@id/shadowLayout" android:clipChildren="false" android:clipToPadding="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentRight="true" app:slCornerRadius="@dimen/defaultMenuDropShadowCornerRadius" app:slShadowSize="@dimen/defaultMenuDropShadowSize" app:slShadowColor="@color/finestBlack10">
        <LinearLayout android:orientation="vertical" android:id="@id/menuBackground" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center|left" android:id="@id/menuRefresh" android:background="@drawable/selector_light_theme" android:layout_width="fill_parent" android:layout_height="48.0dip" android:onClick="onClick">
                <TextView android:textSize="@dimen/defaultMenuTextSize" android:textColor="@color/finestBlack" android:ellipsize="end" android:id="@id/menuRefreshTv" android:paddingLeft="16.0dip" android:paddingRight="32.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/refresh" android:singleLine="true" android:includeFontPadding="false" />
            </LinearLayout>
            <LinearLayout android:gravity="center|left" android:id="@id/menuFind" android:background="@drawable/selector_light_theme" android:layout_width="fill_parent" android:layout_height="48.0dip" android:onClick="onClick">
                <TextView android:textSize="@dimen/defaultMenuTextSize" android:textColor="@color/finestBlack" android:ellipsize="end" android:id="@id/menuFindTv" android:paddingLeft="16.0dip" android:paddingRight="32.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/find" android:singleLine="true" android:includeFontPadding="false" />
            </LinearLayout>
            <LinearLayout android:gravity="center|left" android:id="@id/menuShareVia" android:background="@drawable/selector_light_theme" android:layout_width="fill_parent" android:layout_height="48.0dip" android:onClick="onClick">
                <TextView android:textSize="@dimen/defaultMenuTextSize" android:textColor="@color/finestBlack" android:ellipsize="end" android:id="@id/menuShareViaTv" android:paddingLeft="16.0dip" android:paddingRight="32.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share_via" android:singleLine="true" android:includeFontPadding="false" />
            </LinearLayout>
            <LinearLayout android:gravity="center|left" android:id="@id/menuCopyLink" android:background="@drawable/selector_light_theme" android:layout_width="fill_parent" android:layout_height="48.0dip" android:onClick="onClick">
                <TextView android:textSize="@dimen/defaultMenuTextSize" android:textColor="@color/finestBlack" android:ellipsize="end" android:id="@id/menuCopyLinkTv" android:paddingLeft="16.0dip" android:paddingRight="32.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/copy_link" android:singleLine="true" android:includeFontPadding="false" />
            </LinearLayout>
            <LinearLayout android:gravity="center|left" android:id="@id/menuOpenWith" android:background="@drawable/selector_light_theme" android:layout_width="fill_parent" android:layout_height="48.0dip" android:onClick="onClick">
                <TextView android:textSize="@dimen/defaultMenuTextSize" android:textColor="@color/finestBlack" android:ellipsize="end" android:id="@id/menuOpenWithTv" android:paddingLeft="16.0dip" android:paddingRight="32.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/open_with" android:singleLine="true" android:includeFontPadding="false" />
            </LinearLayout>
        </LinearLayout>
    </com.thefinestartist.finestwebview.views.ShadowLayout>
</RelativeLayout>